# belajar

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/nlp/: hello_vectors.rs  sentiment_bayes.rs  sentiment_logistic_regression.rs
src/: activation.rs  lib.rs  loss.rs  main.rs  nlp.rs  optim.rs
src/func/: activation.rs  linalg.rs  mod.rs
src/nlp/: mod.rs  nlp.rs  wordv.rs
tests/: activation.rs  linalg.rs  nlp.rs  optim.rs  test.rs
