[package]
name = "belajar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.0", features = ["blas", "approx"] }
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
ndarray-rand = "0.14.0"
serde_json = "1.0"
lazy_static = "1.4.0"
# regex currently requires the standard library, you must re-enable it.
regex = { version = "1.3", default-features = false, features = ["std", "unicode-perl"] }
fancy-regex = "0.11.0"
html-escape = "0.2.13"
stem = {git = "https://github.com/rafiyq/rust-stem"}